# docker_cpp

./: .dockerignore  .gitignore  CMakeLists.txt  CMakeSettings.json  Dockerfile  LICENSE  README.md  compile_commands.json  conanfile.txt
app/: CMakeLists.txt  main.cpp
ci/: build.yml
cmake/: sanitizers.cmake
docker/: Dockerfile.clang  Dockerfile.debian  Dockerfile.gcc  Dockerfile.gcc.test  Dockerfile.ubuntu_clang  Dockerfile.ubuntu_gcc
docker_cpp/app/: CMakeLists.txt  main.cpp
docker_cpp/core/: CMakeLists.txt  conanfile.txt
docker_cpp/core/include/core/: engine.hpp
docker_cpp/core/src/: engine.cpp
docker_cpp/lib/: CMakeLists.txt
docker_cpp/lib/include/lib/: lib.hpp
docker_cpp/lib/src/: lib.cpp
docker_cpp/libA/: CMakeLists.txt  conanfile.txt
docker_cpp/libA/include/libA/: api.hpp  libA.hpp
docker_cpp/libA/src/: libA.cpp
docker_cpp/libB/: CMakeLists.txt  conanfile.txt
docker_cpp/libB/include/libB/: libB.hpp
docker_cpp/libB/src/: libB.cpp
docker_cpp/tests/: CMakeLists.txt
docker_cpp/tests/src/: test_lib.cpp
docker_cpp/unit_tests/: CMakeLists.txt  conanfile.txt
lib/: CMakeLists.txt  conanfile.py  conanfile.txt
lib/include/lib/: lib.hpp
lib/src/: lib.cpp
scripts/: cmake_install.sh  cmake_run.sh  conan_install.sh  docker_build.sh  docker_run.sh  docker_test_build.sh  docker_test_run.sh
tests/: CMakeLists.txt  conanfile.py
tests/include/: raw_frame_test.hpp  test_lib.hpp  video_capture_test.hpp
tests/src/: main.cpp  test_lib.cpp  video_capture_test.cpp
